Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/746.7B0.22260A|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.22260A|fc=1.yaml
@@ -16,6 +16,12 @@ test_cases:
     VOLKSWAGEN_AAT_CABIN: 21
   response: 7B00462260A8E
 - expected_values:
+    VOLKSWAGEN_AAT_CABIN: 21.5
+  response: 7B00462260A8F
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: 22
+  response: 7B00462260A90
+- expected_values:
     VOLKSWAGEN_AAT_CABIN: 22.5
   response: 7B00462260A91
 - expected_values:
