--- a/tests/test_cases/2024/commands/7E0.0105.yaml
+++ b/tests/test_cases/2024/commands/7E0.0105.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
-    ECT: 75
-  response: '7E803410573'
+    ECT: 67
+  response: 7E80341056B
 - expected_values:
     ECT: 108
   response: '7E803410594'
