--- a/tests/test_cases/2024/commands/FC00.FE0076.22295A|ta=76,c=17.yaml
+++ b/tests/test_cases/2024/commands/FC00.FE0076.22295A|ta=76,c=17.yaml
@@ -1,5 +1,26 @@
 command_id: FC00.FE0076.22295A|ta=76,c=17
 test_cases:
 - expected_values:
+    VOLKSWAGEN_ENG_ODO: 18068
+  response: 17FE00760662295A004694
+- expected_values:
+    VOLKSWAGEN_ENG_ODO: 18069
+  response: 17FE00760662295A004695
+- expected_values:
+    VOLKSWAGEN_ENG_ODO: 18070
+  response: 17FE00760662295A004696
+- expected_values:
+    VOLKSWAGEN_ENG_ODO: 18071
+  response: 17FE00760662295A004697
+- expected_values:
+    VOLKSWAGEN_ENG_ODO: 18072
+  response: 17FE00760662295A004698
+- expected_values:
+    VOLKSWAGEN_ENG_ODO: 18073
+  response: 17FE00760662295A004699
+- expected_values:
+    VOLKSWAGEN_ENG_ODO: 18074
+  response: 17FE00760662295A00469A
+- expected_values:
     VOLKSWAGEN_ENG_ODO: 25923
   response: 17FE00760662295A006543
