Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/7E0.7E8.221154.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.221154.yaml
@@ -2,19 +2,25 @@ command_id: 7E0.7E8.221154
 test_cases:
 - expected_values:
     VOLKSWAGEN_EM_TORQ_2: 125.4375
+    VOLKSWAGEN_MISFIRE_4: 4014
   response: 7E8056211540FAE
 - expected_values:
     VOLKSWAGEN_EM_TORQ_2: 159.90625
+    VOLKSWAGEN_MISFIRE_4: 5117
   response: 7E80562115413FD
 - expected_values:
     VOLKSWAGEN_EM_TORQ_2: 159.9375
+    VOLKSWAGEN_MISFIRE_4: 5118
   response: 7E80562115413FE
 - expected_values:
     VOLKSWAGEN_EM_TORQ_2: 159.96875
+    VOLKSWAGEN_MISFIRE_4: 5119
   response: 7E80562115413FF
 - expected_values:
     VOLKSWAGEN_EM_TORQ_2: 160
+    VOLKSWAGEN_MISFIRE_4: 5120
   response: '7E8056211541400'
 - expected_values:
     VOLKSWAGEN_EM_TORQ_2: 160.03125
+    VOLKSWAGEN_MISFIRE_4: 5121
   response: '7E8056211541401'
