--- a/tests/test_cases/2018/commands/7E0.7E8.221152.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.221152.yaml
@@ -2,10 +2,13 @@ command_id: 7E0.7E8.221152
 test_cases:
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 2811.5
+    VOLKSWAGEN_MISFIRE_6: 5623
   response: 7E80562115215F7
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 2814
+    VOLKSWAGEN_MISFIRE_6: 5628
   response: 7E80562115215FC
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 7543.5
+    VOLKSWAGEN_MISFIRE_6: 15087
   response: 7E8056211523AEF
