--- a/tests/test_cases/2024/commands/746.7B0.222605|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.222605|fc=1.yaml
@@ -1,8 +1,8 @@
 command_id: 746.7B0.222605|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_REFRIG_P: 4.2
+    VOLKSWAGEN_CLIMATE_REFRIG_P: 4.2
   response: 7B00462260515
 - expected_values:
-    VOLKSWAGEN_REFRIG_P: 13
+    VOLKSWAGEN_CLIMATE_REFRIG_P: 13
   response: 7B00462260541
