--- a/tests/test_cases/2024/commands/746.7B0.222613|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.222613|fc=1.yaml
@@ -1,11 +1,14 @@
 command_id: 746.7B0.222613|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 20
     VOLKSWAGEN_HVAC_IAT: 20
   response: 7B00562261300C8
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 25.3
     VOLKSWAGEN_HVAC_IAT: 25.3
   response: 7B00562261300FD
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 25.6
     VOLKSWAGEN_HVAC_IAT: 25.6
   response: 7B0056226130100
