--- a/tests/test_cases/2024/commands/746.7B0.22263D|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.22263D|fc=1.yaml
@@ -1,8 +1,8 @@
 command_id: 746.7B0.22263D|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_REAR_DEFL_T: 33.3
+    VOLKSWAGEN_CLIMATE_RR_DEFL_T: 33.3
   response: 7B00462263D64
 - expected_values:
-    VOLKSWAGEN_REAR_DEFL_T: 57.942
+    VOLKSWAGEN_CLIMATE_RR_DEFL_T: 57.942
   response: 7B00462263DAE
