--- a/tests/test_cases/2025/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2025/commands/714.77E.221014|fc=1.yaml
@@ -1,8 +1,10 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AAT: 9.5
+    VOLKSWAGEN_AAT: 69
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 9.5
   response: '77E0462101477'
 - expected_values:
-    VOLKSWAGEN_AAT: 23
+    VOLKSWAGEN_AAT: 96
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 23
   response: '77E0462101492'
