--- a/tests/test_cases/2025/commands/746.7B0.222612|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.222612|fc=1.yaml
@@ -1,11 +1,14 @@
 command_id: 746.7B0.222612|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.333
     VOLKSWAGEN_HVAC_EVAP_T: 42
   response: 7B00562261201A4
 - expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.333
     VOLKSWAGEN_HVAC_EVAP_T: 51
   response: 7B00562261201FE
 - expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.666
     VOLKSWAGEN_HVAC_EVAP_T: 52
   response: 7B0056226120208
