--- a/tests/test_cases/2025/commands/746.7B0.222613|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.222613|fc=1.yaml
@@ -1,8 +1,10 @@
 command_id: 746.7B0.222613|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 30.5
     VOLKSWAGEN_HVAC_IAT: 30.5
   response: 7B0056226130131
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 33.6
     VOLKSWAGEN_HVAC_IAT: 33.6
   response: 7B0056226130150
