--- a/tests/test_cases/2025/commands/746.7B0.22263D|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.22263D|fc=1.yaml
@@ -1,8 +1,8 @@
 command_id: 746.7B0.22263D|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_REAR_DEFL_T: 32.634
+    VOLKSWAGEN_CLIMATE_RR_DEFL_T: 32.634
   response: 7B00462263D62
 - expected_values:
-    VOLKSWAGEN_REAR_DEFL_T: 45.288
+    VOLKSWAGEN_CLIMATE_RR_DEFL_T: 45.288
   response: 7B00462263D88
