Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/7E0.0106.yaml
+++ b/tests/test_cases/2024/commands/7E0.0106.yaml
@@ -4,5 +4,5 @@ test_cases:
     SHRTFT1: -44.40625
   response: 7E80341066B
 - expected_values:
-    SHRTFT1: -22.53125
-  response: '7E803410687'
+    SHRTFT1: -19.40625
+  response: 7E80341068B
