Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/7E1.223841.yaml
+++ b/tests/test_cases/2018/commands/7E1.223841.yaml
@@ -1,18 +1,14 @@
-command_id: 7E1.7E9.223841|fc=1
+command_id: 7E1.223841
 test_cases:
 - expected_values:
-    VOLKSWAGEN_ODO_3841: 0
     VOLKSWAGEN_ODO_TCM_1: 0
   response: '7E90762384100000000'
 - expected_values:
-    VOLKSWAGEN_ODO_3841: 83973
     VOLKSWAGEN_ODO_TCM_1: 852495360
   response: 7E907623841000CD032
 - expected_values:
-    VOLKSWAGEN_ODO_3841: 99814
     VOLKSWAGEN_ODO_TCM_1: 4231663360
   response: 7E907623841000F3AFC
 - expected_values:
-    VOLKSWAGEN_ODO_3841: 203422
     VOLKSWAGEN_ODO_TCM_1: 738860800
   response: 7E907623841001F0A2C
