--- a/tests/test_cases/2025/commands/710.77A.222AF7|fc=1.yaml
+++ b/tests/test_cases/2025/commands/710.77A.222AF7|fc=1.yaml
@@ -130,6 +130,22 @@ test_cases:
     77A230022F845564455
 - expected_values:
     VOLKSWAGEN_AUX_BAT_AGE_CAP: 74
+    VOLKSWAGEN_AUX_BAT_AGE_POW: 90
+    VOLKSWAGEN_AUX_BAT_C: -38.07
+    VOLKSWAGEN_AUX_BAT_CAP: 68
+    VOLKSWAGEN_AUX_BAT_CHRG_TOT: 960.7
+    VOLKSWAGEN_AUX_BAT_DSCH_TOT: 934
+    VOLKSWAGEN_AUX_BAT_SOC: 73
+    VOLKSWAGEN_AUX_BAT_T: 21
+    VOLKSWAGEN_AUX_BAT_T_S: 21
+    VOLKSWAGEN_AUX_BAT_V: 12.189
+  response: |-
+    77A101A622AF71FFDFF
+    77A21FF6B4A28493D3D
+    77A2212120000258700
+    77A2300247C4A5A4455
+- expected_values:
+    VOLKSWAGEN_AUX_BAT_AGE_CAP: 74
     VOLKSWAGEN_AUX_BAT_AGE_POW: 93
     VOLKSWAGEN_AUX_BAT_C: -36.74
     VOLKSWAGEN_AUX_BAT_CAP: 68
