--- a/tests/test_cases/2025/commands/710.77A.222AB6|fc=1.yaml
+++ b/tests/test_cases/2025/commands/710.77A.222AB6|fc=1.yaml
@@ -1,6 +1,11 @@
 command_id: 710.77A.222AB6|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_RANGE_V2: 230
+  response: |-
+    77A100A622AB600E600
+    77A21E607FD01555555
+- expected_values:
     VOLKSWAGEN_RANGE_V2: 240
   response: |-
     77A100A622AB600F000
