--- a/tests/test_cases/2025/commands/7E0.0106.yaml
+++ b/tests/test_cases/2025/commands/7E0.0106.yaml
@@ -4,5 +4,5 @@ test_cases:
     SHRTFT1: -41.28125
   response: 7E80341066F
 - expected_values:
-    SHRTFT1: -22.53125
-  response: '7E803410687'
+    SHRTFT1: -17.84375
+  response: 7E80341068D
