--- a/tests/test_cases/2025/commands/7E1.223841.yaml
+++ b/tests/test_cases/2025/commands/7E1.223841.yaml
@@ -1,14 +1,11 @@
-command_id: 7E1.7E9.223841|fc=1
+command_id: 7E1.223841
 test_cases:
 - expected_values:
-    VOLKSWAGEN_ODO_3841: 435
     VOLKSWAGEN_ODO_TCM_1: 4262461440
   response: 7E907623841000010FE
 - expected_values:
-    VOLKSWAGEN_ODO_3841: 435.1
     VOLKSWAGEN_ODO_TCM_1: 4279238656
   response: 7E907623841000010FF
 - expected_values:
-    VOLKSWAGEN_ODO_3841: 435.2
     VOLKSWAGEN_ODO_TCM_1: 1114112
   response: '7E90762384100001100'
