Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/FC00.FE0076.22295A|ta=76,c=17.yaml
+++ b/tests/test_cases/2024/commands/FC00.FE0076.22295A|ta=76,c=17.yaml
@@ -4,8 +4,11 @@ test_cases:
     VOLKSWAGEN_ENG_ODO: 18068
   response: 17FE00760662295A004694
 - expected_values:
-    VOLKSWAGEN_ENG_ODO: 18148
-  response: 17FE00760662295A0046E4
+    VOLKSWAGEN_ENG_ODO: 18175
+  response: 17FE00760662295A0046FF
+- expected_values:
+    VOLKSWAGEN_ENG_ODO: 18176
+  response: 17FE00760662295A004700
 - expected_values:
     VOLKSWAGEN_ENG_ODO: 25923
   response: 17FE00760662295A006543
