--- a/tests/test_cases/2024/commands/7E0.0111.yaml
+++ b/tests/test_cases/2024/commands/7E0.0111.yaml
@@ -1,11 +1,8 @@
 command_id: 7E0.0111
 test_cases:
 - expected_values:
-    TP: 12.94118
-  response: '7E803411121'
+    TP: 12.15686
+  response: 7E80341111F
 - expected_values:
-    TP: 13.33333
-  response: '7E803411122'
-- expected_values:
-    TP: 13.72549
-  response: '7E803411123'
+    TP: 75.29412
+  response: 7E8034111C0
