--- a/tests/test_cases/2025/commands/746.7B0.2226ED|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.2226ED|fc=1.yaml
@@ -17,6 +17,10 @@ test_cases:
     VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.3
   response: 7B0046226ED03
 - expected_values:
+    VOLKSWAGEN_AIR_POLUTION: 0.4
+    VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.4
+  response: 7B0046226ED04
+- expected_values:
     VOLKSWAGEN_AIR_POLUTION: 0.5
     VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.5
   response: 7B0046226ED05
