--- a/tests/test_cases/2024/commands/710.77A.222AF7|fc=1.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AF7|fc=1.yaml
@@ -514,6 +514,22 @@ test_cases:
     77A2300EE45404D4455
 - expected_values:
     VOLKSWAGEN_AUX_BAT_AGE_CAP: 58
+    VOLKSWAGEN_AUX_BAT_AGE_POW: 72
+    VOLKSWAGEN_AUX_BAT_C: 47.43
+    VOLKSWAGEN_AUX_BAT_CAP: 68
+    VOLKSWAGEN_AUX_BAT_CHRG_TOT: 11557.3
+    VOLKSWAGEN_AUX_BAT_DSCH_TOT: 11497.5
+    VOLKSWAGEN_AUX_BAT_SOC: 41
+    VOLKSWAGEN_AUX_BAT_T: 8
+    VOLKSWAGEN_AUX_BAT_T_S: 8
+    VOLKSWAGEN_AUX_BAT_V: 15.074
+  response: |-
+    77A101A622AF72B4200
+    77A2100B94608293030
+    77A2220170001C37500
+    77A2301C11F3A484455
+- expected_values:
+    VOLKSWAGEN_AUX_BAT_AGE_CAP: 58
     VOLKSWAGEN_AUX_BAT_AGE_POW: 70
     VOLKSWAGEN_AUX_BAT_C: 37.73
     VOLKSWAGEN_AUX_BAT_CAP: 68
