--- a/tests/test_cases/2024/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2024/commands/714.77E.22224B|fc=1.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 62
   response: 77E0562224B003E
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 306
+  response: 77E0562224B0132
