--- a/tests/test_cases/2024/commands/767.7D1.220838|fc=1.yaml
+++ b/tests/test_cases/2024/commands/767.7D1.220838|fc=1.yaml
@@ -8,3 +8,7 @@ test_cases:
     VOLKSWAGEN_ECALL_SOC: 94
     VOLKSWAGEN_ECALL_STATUS: NORMAL
   response: 7D105620838025E
+- expected_values:
+    VOLKSWAGEN_ECALL_SOC: 97
+    VOLKSWAGEN_ECALL_STATUS: NORMAL
+  response: 7D1056208380261
