--- a/tests/test_cases/2024/commands/7E0.0105.yaml
+++ b/tests/test_cases/2024/commands/7E0.0105.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
-    ECT: 66
-  response: 7E80341056A
+    ECT: 63
+  response: '7E803410567'
 - expected_values:
     ECT: 109
   response: '7E803410595'
