Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221801|fc=1.yaml
@@ -22,6 +22,20 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 42.8
+    VOLKSWAGEN_FR_VSS_V2: 42.8
+  response: |-
+    77D101062180101AC20
+    77D21000780048504D8
+    77D2204A901AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_FR_VSS: 89.8
+    VOLKSWAGEN_FR_VSS_V2: 89.8
+  response: |-
+    77D1010621801038220
+    77D2100078004AE04F4
+    77D2204C901AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 304
     VOLKSWAGEN_FR_VSS_V2: 304
   response: |-
@@ -29,10 +43,10 @@ test_cases:
     77D21000780064507C6
     77D22074901AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FR_VSS: 895.1
-    VOLKSWAGEN_FR_VSS_V2: 895.1
+    VOLKSWAGEN_FR_VSS: 306.8
+    VOLKSWAGEN_FR_VSS_V2: 306.8
   response: |-
-    77D101062180122F720
+    77D10106218010BFC20
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
