--- a/tests/test_cases/2024/commands/713.77D.221803|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221803|fc=1.yaml
@@ -22,6 +22,20 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RR_VSS: 169.9
+    VOLKSWAGEN_RR_VSS_V2: 169.9
+  response: |-
+    77D101062180306A320
+    77D21000780069807AF
+    77D2206EC01AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_RR_VSS: 245.7
+    VOLKSWAGEN_RR_VSS_V2: 245.7
+  response: |-
+    77D1010621803099920
+    77D210007800A3C0FE7
+    77D220E2001AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RR_VSS: 307.1
     VOLKSWAGEN_RR_VSS_V2: 307.1
   response: |-
