--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -25,6 +25,7 @@ supported_commands_by_ecu:
   - 0111:TP
   - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
   - 0115:O2S12,SHRTFT11
+  - 0119:O2S22,SHRTFT22
   - 011C:OBDSUP
   - 011F:RUNTM
   - 0121:MIL_DIST
@@ -34,6 +35,7 @@ supported_commands_by_ecu:
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0133:BARO
+  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 013C:CATEMP11
   - 013D:CATEMP21
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
