Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/7E0.010D.yaml
+++ b/tests/test_cases/2018/commands/7E0.010D.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.010D
 test_cases:
 - expected_values:
-    VSS: 73
-  response: 7E803410D49
+    VSS: 0
+  response: 7E803410D00
+- expected_values:
+    VSS: 80
+  response: 7E803410D50
