--- a/tests/test_cases/2018/commands/710.77A.222A10|fc=1.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A10|fc=1.yaml
@@ -4,6 +4,12 @@ test_cases:
     VOLKSWAGEN_BAT_V_AT_REST: 9
   response: 77A04622A1000
 - expected_values:
+    VOLKSWAGEN_BAT_V_AT_REST: 15.14118
+  response: 77A04622A101D
+- expected_values:
+    VOLKSWAGEN_BAT_V_AT_REST: 15.35294
+  response: 77A04622A101E
+- expected_values:
     VOLKSWAGEN_BAT_V_AT_REST: 15.56471
   response: 77A04622A101F
 - expected_values:
