--- a/tests/test_cases/2018/commands/7E0.7E8.2210E0.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2210E0.yaml
@@ -13,6 +13,10 @@ test_cases:
     VOLKSWAGEN_ODO_V4: 99840
   response: 7E8076210E000018600
 - expected_values:
+    VOLKSWAGEN_ODO_2_V3: 104360
+    VOLKSWAGEN_ODO_V4: 104360
+  response: 7E8076210E0000197A8
+- expected_values:
     VOLKSWAGEN_ODO_2_V3: 203422
     VOLKSWAGEN_ODO_V4: 203422
   response: 7E8076210E000031A9E
