Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -152,6 +152,40 @@ supported_commands_by_ecu:
   - 7E1.7E9.222104:VOLKSWAGEN_ATF_T
   - 7E1.7E9.22210F:VOLKSWAGEN_GEAR,VOLKSWAGEN_GEAR_SHFT
 unsupported_commands_by_ecu:
+  "6F1":
+  - 6F1.22420C
+  - 6F1.22D031
+  - 6F1.22DFE7
+  - 6F1.607.226335
+  - 6F1.607.22DD68
+  - 6F1.607.22DD69
+  - 6F1.607.22DDBC
+  - 6F1.607.22DDC0
+  - 6F1.607.22DF71
+  - 6F1.607.22DFA0
+  - 6F1.607.22E5C7
+  - 6F1.607.22E5CE
+  - 6F1.60D.22D240
+  - 6F1.612.224AB1
+  - 6F1.612.22586F
+  - 6F1.618.22DA12
+  - 6F1.618.22DA1F
+  - 6F1.618.22DA22
+  - 6F1.618.22DA23
+  - 6F1.618.22DA25
+  - 6F1.618.22DA28
+  - 6F1.618.22DA2A
+  - 6F1.618.22DA2E
+  - 6F1.618.22DA37
+  - 6F1.619.22DB32
+  - 6F1.61A.22DE00
+  - 6F1.629.22DBE4
+  - 6F1.640.221700
+  - 6F1.656.22DCDD
+  - 6F1.660.22D107
+  - 6F1.660.22D10D
+  - 6F1.660.22D111
+  - 6F1.660.22D112
   "70B":
   - 70B.2218A0|fc=1:VOLKSWAGEN_TID_1,VOLKSWAGEN_TPOS_1,VOLKSWAGEN_TPS_1,VOLKSWAGEN_TPW_1,VOLKSWAGEN_TP_1,VOLKSWAGEN_TP_FR,VOLKSWAGEN_TT_1
   - 70B.2218A1|fc=1:VOLKSWAGEN_TID_2,VOLKSWAGEN_TPOS_2,VOLKSWAGEN_TPS_2,VOLKSWAGEN_TPW_2,VOLKSWAGEN_TP_2,VOLKSWAGEN_TP_FL,VOLKSWAGEN_TT_2
