--- a/tests/test_cases/2018/commands/710.77A.222A61|fc=1.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A61|fc=1.yaml
@@ -17,4 +17,16 @@ test_cases:
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000157
-    77A21C100014281AAAA
+    77A21D000014287AAAA
+- expected_values:
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000157
+    77A21E000014287AAAA
+- expected_values:
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000157
+    77A21E200014288AAAA
