--- a/tests/test_cases/2018/commands/713.77D.221800|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221800|fc=1.yaml
@@ -8,23 +8,30 @@ test_cases:
     77D21FFFFFFFEFFFEFF
     77D22FEAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FL_VSS: 3.4
-    VOLKSWAGEN_FL_VSS_V2: 3.4
+    VOLKSWAGEN_FL_VSS: 3.2
+    VOLKSWAGEN_FL_VSS_V2: 3.2
   response: |-
-    77D100E621800002280
+    77D100E621800002080
     77D21FFFFFFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FL_VSS: 56.9
-    VOLKSWAGEN_FL_VSS_V2: 56.9
+    VOLKSWAGEN_FL_VSS: 51.1
+    VOLKSWAGEN_FL_VSS_V2: 51.1
   response: |-
-    77D100E621800023980
+    77D100E62180001FF80
     77D21FFFFFFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FL_VSS: 76
-    VOLKSWAGEN_FL_VSS_V2: 76
+    VOLKSWAGEN_FL_VSS: 76.9
+    VOLKSWAGEN_FL_VSS_V2: 76.9
   response: |-
-    77D100E62180002F880
+    77D100E621800030180
     77D21FFFFFFFFFFFFFF
     77D22FFAAAAAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_FL_VSS: 79.1
+    VOLKSWAGEN_FL_VSS_V2: 79.1
+  response: |-
+    77D100E621800031780
+    77D21FFFF0353054104
+    77D2244AAAAAAAAAAAA
