--- a/tests/test_cases/2018/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221802|fc=1.yaml
@@ -8,6 +8,13 @@ test_cases:
     77D210006FFFEFFFEFF
     77D22FEAAAAAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 0
+    VOLKSWAGEN_RL_VSS_V2: 0
+  response: |-
+    77D100E621802000070
+    77D210006FFFEFFFEFF
+    77D22FEAAAAAAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 3.6
     VOLKSWAGEN_RL_VSS_V2: 3.6
   response: |-
@@ -15,16 +22,16 @@ test_cases:
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RL_VSS: 56.2
-    VOLKSWAGEN_RL_VSS_V2: 56.2
+    VOLKSWAGEN_RL_VSS: 76.2
+    VOLKSWAGEN_RL_VSS_V2: 76.2
   response: |-
-    77D100E621802023230
+    77D100E62180202FA30
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RL_VSS: 75.4
-    VOLKSWAGEN_RL_VSS_V2: 75.4
+    VOLKSWAGEN_RL_VSS: 78.8
+    VOLKSWAGEN_RL_VSS_V2: 78.8
   response: |-
-    77D100E62180202F230
+    77D100E621802031430
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
