--- a/tests/test_cases/2018/commands/713.77D.221803|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221803|fc=1.yaml
@@ -8,23 +8,30 @@ test_cases:
     77D210006FFFEFFFEFF
     77D22FEAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RR_VSS: 10.6
-    VOLKSWAGEN_RR_VSS_V2: 10.6
+    VOLKSWAGEN_RR_VSS: 0
+    VOLKSWAGEN_RR_VSS_V2: 0
   response: |-
-    77D100E621803006A30
+    77D100E621803000070
+    77D210006FFFEFFFEFF
+    77D22FEAAAAAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_RR_VSS: 3.1
+    VOLKSWAGEN_RR_VSS_V2: 3.1
+  response: |-
+    77D100E621803001F30
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RR_VSS: 54.8
-    VOLKSWAGEN_RR_VSS_V2: 54.8
+    VOLKSWAGEN_RR_VSS: 76.3
+    VOLKSWAGEN_RR_VSS_V2: 76.3
   response: |-
-    77D100E621803022430
+    77D100E62180302FB30
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RR_VSS: 75.5
-    VOLKSWAGEN_RR_VSS_V2: 75.5
+    VOLKSWAGEN_RR_VSS: 77.1
+    VOLKSWAGEN_RR_VSS_V2: 77.1
   response: |-
-    77D100E62180302F330
+    77D100E621803030330
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
