--- a/tests/test_cases/2018/commands/713.77D.22180C|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.22180C|fc=1.yaml
@@ -11,6 +11,51 @@ test_cases:
     77D21000000000000AA
 - expected_values:
     VOLKSWAGEN_EDL_ACTIVE: 0
+    VOLKSWAGEN_EDL_FR_L_BRAKE_T: 71.5
+    VOLKSWAGEN_EDL_FR_R_BRAKE_T: 71.5
+    VOLKSWAGEN_EDL_RR_L_BRAKE_T: 61.5
+    VOLKSWAGEN_EDL_RR_R_BRAKE_T: 62
+  response: |-
+    77D100C62180CBC008F
+    77D21008F007B007CAA
+- expected_values:
+    VOLKSWAGEN_EDL_ACTIVE: 0
+    VOLKSWAGEN_EDL_FR_L_BRAKE_T: 100
+    VOLKSWAGEN_EDL_FR_R_BRAKE_T: 100
+    VOLKSWAGEN_EDL_RR_L_BRAKE_T: 87.5
+    VOLKSWAGEN_EDL_RR_R_BRAKE_T: 87.5
+  response: |-
+    77D100C62180CBC00C8
+    77D2100C800AF00AFAA
+- expected_values:
+    VOLKSWAGEN_EDL_ACTIVE: 0
+    VOLKSWAGEN_EDL_FR_L_BRAKE_T: 126
+    VOLKSWAGEN_EDL_FR_R_BRAKE_T: 126
+    VOLKSWAGEN_EDL_RR_L_BRAKE_T: 108.5
+    VOLKSWAGEN_EDL_RR_R_BRAKE_T: 108.5
+  response: |-
+    77D100C62180CBC00FC
+    77D2100FC00D900D9AA
+- expected_values:
+    VOLKSWAGEN_EDL_ACTIVE: 0
+    VOLKSWAGEN_EDL_FR_L_BRAKE_T: 128
+    VOLKSWAGEN_EDL_FR_R_BRAKE_T: 127.5
+    VOLKSWAGEN_EDL_RR_L_BRAKE_T: 113
+    VOLKSWAGEN_EDL_RR_R_BRAKE_T: 113
+  response: |-
+    77D100C62180CBC0100
+    77D2100FF00E200E2AA
+- expected_values:
+    VOLKSWAGEN_EDL_ACTIVE: 0
+    VOLKSWAGEN_EDL_FR_L_BRAKE_T: 136
+    VOLKSWAGEN_EDL_FR_R_BRAKE_T: 136
+    VOLKSWAGEN_EDL_RR_L_BRAKE_T: 121
+    VOLKSWAGEN_EDL_RR_R_BRAKE_T: 121.5
+  response: |-
+    77D100C62180CBC0110
+    77D21011000F200F3AA
+- expected_values:
+    VOLKSWAGEN_EDL_ACTIVE: 0
     VOLKSWAGEN_EDL_FR_L_BRAKE_T: 0
     VOLKSWAGEN_EDL_FR_R_BRAKE_T: 0
     VOLKSWAGEN_EDL_RR_L_BRAKE_T: 0
