--- a/tests/test_cases/2018/commands/713.77D.221810|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221810|fc=1.yaml
@@ -4,12 +4,12 @@ test_cases:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
   response: |-
     77D100C62181001000A
-    77D21FCBF000003F0AA
+    77D21FC5E000003F0AA
 - expected_values:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
   response: |-
-    77D100C621810010014
-    77D21FC5E000003F0AA
+    77D100C62181001000A
+    77D21FCBF000003F0AA
 - expected_values:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
   response: |-
@@ -23,5 +23,15 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
   response: |-
-    77D100C6218100107EE
-    77D21FC86000003F0AA
+    77D100C6218100104F6
+    77D21FC78000003F0AA
+- expected_values:
+    VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
+  response: |-
+    77D100C621810010500
+    77D21FC83000003F0AA
+- expected_values:
+    VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
+  response: |-
+    77D100C621810010730
+    77D21FC6E000003F0AA
