--- a/tests/test_cases/2018/commands/746.7B0.22261E|fc=1.yaml
+++ b/tests/test_cases/2018/commands/746.7B0.22261E|fc=1.yaml
@@ -5,6 +5,10 @@ test_cases:
     VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 74
   response: 7B00662261E004A00
 - expected_values:
-    VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 76
-    VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 147
-  response: 7B00662261E009398
+    VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 100
+    VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 173
+  response: 7B00662261E00ADC8
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 100
+    VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 174
+  response: 7B00662261E00AEC8
