--- a/tests/test_cases/2018/commands/7E0.7E8.221139.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.221139.yaml
@@ -1,11 +1,14 @@
 command_id: 7E0.7E8.221139
 test_cases:
 - expected_values:
-    VOLKSWAGEN_MEAN_INJ_QUANTITY: 161.41
-  response: 7E8056211393F0D
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 159.03
+  response: 7E8056211393E1F
 - expected_values:
-    VOLKSWAGEN_MEAN_INJ_QUANTITY: 163.76
-  response: 7E8056211393FF8
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 163.84
+  response: '7E8056211394000'
 - expected_values:
-    VOLKSWAGEN_MEAN_INJ_QUANTITY: 166.41
-  response: '7E8056211394101'
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 166.35
+  response: 7E80562113940FB
+- expected_values:
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 169.38
+  response: 7E805621139422A
