--- a/tests/test_cases/2018/commands/710.77A.222A00|fc=1.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A00|fc=1.yaml
@@ -4,6 +4,12 @@ test_cases:
     VOLKSWAGEN_SSB_VT: 10.6
   response: 77A04622A0000
 - expected_values:
+    VOLKSWAGEN_SSB_VT: 14.4
+  response: 77A04622A0026
+- expected_values:
+    VOLKSWAGEN_SSB_VT: 14.5
+  response: 77A04622A0027
+- expected_values:
     VOLKSWAGEN_SSB_VT: 14.6
   response: 77A04622A0028
 - expected_values:
