--- a/tests/test_cases/2018/commands/713.77D.221821|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221821|fc=1.yaml
@@ -56,6 +56,188 @@ test_cases:
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
     VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN: 79990
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_ADAPT: 104217
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_WARN: 104196
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_NEXT_TO_LAST_WARN: 94738
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_THIRD_TO_LAST_WARN: 87613
+    VOLKSWAGEN_TPMS_ODO_RDG_FOUR_ADAPTATIONS_AGO: 87815
+    VOLKSWAGEN_TPMS_ODO_RDG_THREE_ADAPTATIONS_AGO: 94781
+    VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO: 96085
+    VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND: 254
+  response: |-
+    77D102C621821010001
+    77D2197190001775500
+    77D2201723D00015707
+    77D2300019704000172
+    77D24120001563D0001
+    77D253876FFFEFEFEFF
+    77D26FEFFFEAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_TPMS_AVAIL: 1
+    VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN: 79990
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_ADAPT: 104217
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_WARN: 104196
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_NEXT_TO_LAST_WARN: 94738
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_THIRD_TO_LAST_WARN: 87613
+    VOLKSWAGEN_TPMS_ODO_RDG_FOUR_ADAPTATIONS_AGO: 87815
+    VOLKSWAGEN_TPMS_ODO_RDG_THREE_ADAPTATIONS_AGO: 94781
+    VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO: 96085
+    VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND: 254
+  response: |-
+    77D102C621821010001
+    77D2197190001775500
+    77D2201723D00015707
+    77D2300019704000172
+    77D24120001563D0001
+    77D253876FFFEFEFEFF
+    77D26FEFFFFAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_TPMS_AVAIL: 1
+    VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN: 79990
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_ADAPT: 104217
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_WARN: 104196
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_NEXT_TO_LAST_WARN: 94738
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_THIRD_TO_LAST_WARN: 87613
+    VOLKSWAGEN_TPMS_ODO_RDG_FOUR_ADAPTATIONS_AGO: 87815
+    VOLKSWAGEN_TPMS_ODO_RDG_THREE_ADAPTATIONS_AGO: 94781
+    VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO: 96085
+    VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND: 254
+  response: |-
+    77D102C621821010001
+    77D2197190001775500
+    77D2201723D00015707
+    77D2300019704000172
+    77D24120001563D0001
+    77D253876FFFEFEFEFF
+    77D26FFFFFEAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_TPMS_AVAIL: 1
+    VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN: 79990
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_ADAPT: 104217
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_WARN: 104196
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_NEXT_TO_LAST_WARN: 94738
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_THIRD_TO_LAST_WARN: 87613
+    VOLKSWAGEN_TPMS_ODO_RDG_FOUR_ADAPTATIONS_AGO: 87815
+    VOLKSWAGEN_TPMS_ODO_RDG_THREE_ADAPTATIONS_AGO: 94781
+    VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO: 96085
+    VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND: 254
+  response: |-
+    77D102C621821010001
+    77D2197190001775500
+    77D2201723D00015707
+    77D2300019704000172
+    77D24120001563D0001
+    77D253876FFFEFEFEFF
+    77D26FFFFFFAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_TPMS_AVAIL: 1
+    VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN: 79990
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_ADAPT: 104217
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_WARN: 104196
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_NEXT_TO_LAST_WARN: 94738
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_THIRD_TO_LAST_WARN: 87613
+    VOLKSWAGEN_TPMS_ODO_RDG_FOUR_ADAPTATIONS_AGO: 87815
+    VOLKSWAGEN_TPMS_ODO_RDG_THREE_ADAPTATIONS_AGO: 94781
+    VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO: 96085
+    VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND: 255
+  response: |-
+    77D102C621821010001
+    77D2197190001775500
+    77D2201723D00015707
+    77D2300019704000172
+    77D24120001563D0001
+    77D253876FFFFFFFFFF
+    77D26FEFEFEAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_TPMS_AVAIL: 1
+    VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN: 79990
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_ADAPT: 104217
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_WARN: 104196
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_NEXT_TO_LAST_WARN: 94738
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_THIRD_TO_LAST_WARN: 87613
+    VOLKSWAGEN_TPMS_ODO_RDG_FOUR_ADAPTATIONS_AGO: 87815
+    VOLKSWAGEN_TPMS_ODO_RDG_THREE_ADAPTATIONS_AGO: 94781
+    VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO: 96085
+    VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND: 255
+  response: |-
+    77D102C621821010001
+    77D2197190001775500
+    77D2201723D00015707
+    77D2300019704000172
+    77D24120001563D0001
+    77D253876FFFFFFFFFF
+    77D26FEFEFFAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_TPMS_AVAIL: 1
+    VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN: 79990
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_ADAPT: 104217
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_WARN: 104196
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_NEXT_TO_LAST_WARN: 94738
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_THIRD_TO_LAST_WARN: 87613
+    VOLKSWAGEN_TPMS_ODO_RDG_FOUR_ADAPTATIONS_AGO: 87815
+    VOLKSWAGEN_TPMS_ODO_RDG_THREE_ADAPTATIONS_AGO: 94781
+    VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO: 96085
+    VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND: 255
+    VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND: 255
+  response: |-
+    77D102C621821010001
+    77D2197190001775500
+    77D2201723D00015707
+    77D2300019704000172
+    77D24120001563D0001
+    77D253876FFFFFFFFFF
+    77D26FEFFFFAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_TPMS_AVAIL: 1
+    VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 255
     VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND: 255
     VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND: 255
     VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN: 79990
