--- a/tests/test_cases/2018/commands/746.7B0.22260A|fc=1.yaml
+++ b/tests/test_cases/2018/commands/746.7B0.22260A|fc=1.yaml
@@ -6,3 +6,21 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_AAT_CABIN: -28
   response: 7B00462260A2C
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: -27
+  response: 7B00462260A2E
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: -26
+  response: 7B00462260A30
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: -25
+  response: 7B00462260A32
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: -24.5
+  response: 7B00462260A33
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: -24
+  response: 7B00462260A34
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: -23.5
+  response: 7B00462260A35
