--- a/tests/test_cases/2018/commands/7E0.7E8.221002.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.221002.yaml
@@ -1,11 +1,11 @@
 command_id: 7E0.7E8.221002
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AC_COMP_T: 6.1
-  response: 7E805621002003D
+    VOLKSWAGEN_AC_COMP_T: 0
+  response: '7E8056210020000'
 - expected_values:
     VOLKSWAGEN_AC_COMP_T: 6.2
   response: 7E805621002003E
 - expected_values:
-    VOLKSWAGEN_AC_COMP_T: 12.4
-  response: 7E805621002007C
+    VOLKSWAGEN_AC_COMP_T: 13.1
+  response: '7E8056210020083'
