--- a/tests/test_cases/2018/commands/7E1.7E9.222104.yaml
+++ b/tests/test_cases/2018/commands/7E1.7E9.222104.yaml
@@ -4,5 +4,5 @@ test_cases:
     VOLKSWAGEN_ATF_T: 31
   response: '7E90462210447'
 - expected_values:
-    VOLKSWAGEN_ATF_T: 67
-  response: 7E9046221046B
+    VOLKSWAGEN_ATF_T: 88
+  response: '7E90462210480'
