Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221801|fc=1.yaml
@@ -15,6 +15,13 @@ test_cases:
     77D21000780FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 0
+    VOLKSWAGEN_FR_VSS_V2: 0
+  response: |-
+    77D1010621801000060
+    77D21FFFF00FFFEFFFE
+    77D22FFFE01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 34.8
     VOLKSWAGEN_FR_VSS_V2: 34.8
   response: |-
@@ -50,9 +57,9 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FR_VSS: 905.7
-    VOLKSWAGEN_FR_VSS_V2: 905.7
+    VOLKSWAGEN_FR_VSS: 1177.6
+    VOLKSWAGEN_FR_VSS_V2: 1177.6
   response: |-
-    77D1010621801236120
+    77D10106218012E0020
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
