--- a/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
@@ -15,6 +15,13 @@ test_cases:
     77D21000780FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 0
+    VOLKSWAGEN_RL_VSS_V2: 0
+  response: |-
+    77D1010621802000060
+    77D21FFFF00FFFEFFFE
+    77D22FFFE01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 40.2
     VOLKSWAGEN_RL_VSS_V2: 40.2
   response: |-
@@ -36,9 +43,9 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RL_VSS: 910.1
-    VOLKSWAGEN_RL_VSS_V2: 910.1
+    VOLKSWAGEN_RL_VSS: 1164
+    VOLKSWAGEN_RL_VSS_V2: 1164
   response: |-
-    77D1010621802238D20
+    77D10106218022D7820
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
