--- a/tests/test_cases/2024/commands/713.77D.221800|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221800|fc=1.yaml
@@ -15,6 +15,13 @@ test_cases:
     77D21000780FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FL_VSS: 0
+    VOLKSWAGEN_FL_VSS_V2: 0
+  response: |-
+    77D1010621800000060
+    77D21FFFF00FFFEFFFE
+    77D22FFFE01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FL_VSS: 37.2
     VOLKSWAGEN_FL_VSS_V2: 37.2
   response: |-
@@ -36,9 +43,9 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FL_VSS: 907.7
-    VOLKSWAGEN_FL_VSS_V2: 907.7
+    VOLKSWAGEN_FL_VSS: 1161.7
+    VOLKSWAGEN_FL_VSS_V2: 1161.7
   response: |-
-    77D1010621800237520
+    77D10106218002D6120
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
