Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/7E0.7E8.221139.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.221139.yaml
@@ -1,14 +1,17 @@
 command_id: 7E0.7E8.221139
 test_cases:
 - expected_values:
-    VOLKSWAGEN_MEAN_INJ_QUANTITY: 159.03
-  response: 7E8056211393E1F
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 154.93
+  response: 7E8056211393C85
+- expected_values:
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 156.72
+  response: 7E8056211393D38
+- expected_values:
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 163.8
+  response: 7E8056211393FFC
 - expected_values:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 163.84
   response: '7E8056211394000'
 - expected_values:
-    VOLKSWAGEN_MEAN_INJ_QUANTITY: 166.35
-  response: 7E80562113940FB
-- expected_values:
-    VOLKSWAGEN_MEAN_INJ_QUANTITY: 169.38
-  response: 7E805621139422A
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 168.98
+  response: '7E8056211394202'
