--- a/tests/test_cases/2018/commands/710.77A.222A09|fc=1.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A09|fc=1.yaml
@@ -5,10 +5,14 @@ test_cases:
     VOLKSWAGEN_SSB_C: 0
   response: 77A07622A0900000000
 - expected_values:
-    VOLKSWAGEN_BAT_I: -2999.979
-    VOLKSWAGEN_SSB_C: 5.617
-  response: 77A07622A09000015F1
+    VOLKSWAGEN_BAT_I: -2999.992
+    VOLKSWAGEN_SSB_C: 2.3
+  response: 77A07622A09000008FC
 - expected_values:
     VOLKSWAGEN_BAT_I: 13777.19
     VOLKSWAGEN_SSB_C: 0
   response: 77A07622A09FFFFE694
+- expected_values:
+    VOLKSWAGEN_BAT_I: 13777.192
+    VOLKSWAGEN_SSB_C: 0
+  response: 77A07622A09FFFFE885
