--- a/tests/test_cases/2018/commands/710.77A.222A61|fc=1.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A61|fc=1.yaml
@@ -23,10 +23,16 @@ test_cases:
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000157
-    77A21E000014287AAAA
+    77A21E200014288AAAA
 - expected_values:
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000157
-    77A21E200014288AAAA
+    77A21ED00014294AAAA
+- expected_values:
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000157
+    77A21F000014294AAAA
