--- a/tests/test_cases/2018/commands/7E0.2211BA.yaml
+++ b/tests/test_cases/2018/commands/7E0.2211BA.yaml
@@ -4,11 +4,14 @@ test_cases:
     VOLKSWAGEN_OIL_LEVEL: 0
   response: 7E8056211BA0000
 - expected_values:
-    VOLKSWAGEN_OIL_LEVEL: 41.624
-  response: 7E8056211BA28A6
+    VOLKSWAGEN_OIL_LEVEL: 29.852
+  response: 7E8056211BA1D27
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL: 50.172
   response: 7E8056211BA30FF
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL: 51.2
+  response: 7E8056211BA3200
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL: 62.88
   response: 7E8056211BA3D68
