--- a/tests/test_cases/2018/commands/7E0.7E8.221151.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.221151.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_EM_RPM_1: 1620.5
   response: 7E8056211510CA9
 - expected_values:
+    VOLKSWAGEN_EM_RPM_1: 1621
+  response: 7E8056211510CAA
+- expected_values:
     VOLKSWAGEN_EM_RPM_1: 1857.5
   response: 7E8056211510E83
