Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
@@ -43,6 +43,13 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 615.7
+    VOLKSWAGEN_RL_VSS_V2: 615.7
+  response: |-
+    77D1010621802180D20
+    77D21000780054E06A6
+    77D22060A01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 1164
     VOLKSWAGEN_RL_VSS_V2: 1164
   response: |-
