--- a/tests/test_cases/2024/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2024/commands/714.77E.22224B|fc=1.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 63
   response: 77E0562224B003F
 - expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 64
+  response: 77E0562224B0040
+- expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 306
   response: 77E0562224B0132
