--- a/tests/test_cases/2018/commands/713.77D.221821|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221821|fc=1.yaml
@@ -68,6 +68,32 @@ test_cases:
     VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO: 96085
     VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND: 255
     VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND: 254
+  response: |-
+    77D102C621821010001
+    77D2197190001775500
+    77D2201723D00015707
+    77D2300019704000172
+    77D24120001563D0001
+    77D253876FEFEFEFEFF
+    77D26FFFFFEAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_TPMS_AVAIL: 1
+    VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND: 254
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN: 79990
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_ADAPT: 104217
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_WARN: 104196
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_NEXT_TO_LAST_WARN: 94738
+    VOLKSWAGEN_TPMS_ODO_RDG_AT_THIRD_TO_LAST_WARN: 87613
+    VOLKSWAGEN_TPMS_ODO_RDG_FOUR_ADAPTATIONS_AGO: 87815
+    VOLKSWAGEN_TPMS_ODO_RDG_THREE_ADAPTATIONS_AGO: 94781
+    VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO: 96085
+    VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND: 255
+    VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND: 254
     VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 255
     VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND: 254
   response: |-
@@ -120,7 +146,7 @@ test_cases:
     VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO: 96085
     VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND: 254
     VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND: 254
-    VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 254
+    VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND: 253
     VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND: 253
   response: |-
     77D102C621821010001
@@ -129,7 +155,7 @@ test_cases:
     77D2300019704000172
     77D24120001563D0001
     77D253876FFFEFEFDFF
-    77D26FFFEFEAAAAAAAA
+    77D26FFFEFDAAAAAAAA
 - expected_values:
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
