--- a/tests/test_cases/2024/commands/767.7D1.220838|fc=1.yaml
+++ b/tests/test_cases/2024/commands/767.7D1.220838|fc=1.yaml
@@ -9,6 +9,10 @@ test_cases:
     VOLKSWAGEN_ECALL_STATUS: NORMAL
   response: 7D105620838025E
 - expected_values:
+    VOLKSWAGEN_ECALL_SOC: 95
+    VOLKSWAGEN_ECALL_STATUS: NORMAL
+  response: 7D105620838025F
+- expected_values:
     VOLKSWAGEN_ECALL_SOC: 97
     VOLKSWAGEN_ECALL_STATUS: NORMAL
   response: 7D1056208380261
