--- a/tests/test_cases/2025/commands/7E0.0104.yaml
+++ b/tests/test_cases/2025/commands/7E0.0104.yaml
@@ -4,5 +4,5 @@ test_cases:
     LOAD_PCT: 0
   response: '7E803410400'
 - expected_values:
-    LOAD_PCT: 57.2549
-  response: '7E803410492'
+    LOAD_PCT: 68.23529
+  response: 7E8034104AE
