--- a/tests/test_cases/2025/commands/7E0.01A6.yaml
+++ b/tests/test_cases/2025/commands/7E0.01A6.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     ODO: 4556.8
   response: 7E80641A60000B200
+- expected_values:
+    ODO: 4583
+  response: 7E80641A60000B306
