Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/710.77A.222A61|fc=1.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A61|fc=1.yaml
@@ -35,10 +35,16 @@ test_cases:
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000158
-    77A21030001429CAAAA
+    77A2109000142A0AAAA
 - expected_values:
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000158
-    77A2109000142A0AAAA
+    77A2119000142AFAAAA
+- expected_values:
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000158
+    77A211B000142B0AAAA
