--- a/tests/test_cases/2018/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221802|fc=1.yaml
@@ -4,6 +4,13 @@ test_cases:
     VOLKSWAGEN_RL_VSS: 0
     VOLKSWAGEN_RL_VSS_V2: 0
   response: |-
+    77D100E621802000000
+    77D21FFFFFFFEFFFEFF
+    77D22FEAAAAAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_RL_VSS: 0
+    VOLKSWAGEN_RL_VSS_V2: 0
+  response: |-
     77D100E621802000030
     77D210006FFFEFFFEFF
     77D22FEAAAAAAAAAAAA
@@ -22,16 +29,16 @@ test_cases:
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RL_VSS: 25.3
-    VOLKSWAGEN_RL_VSS_V2: 25.3
+    VOLKSWAGEN_RL_VSS: 102.3
+    VOLKSWAGEN_RL_VSS_V2: 102.3
   response: |-
-    77D100E62180200FD30
+    77D100E62180203FF30
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RL_VSS: 104.5
-    VOLKSWAGEN_RL_VSS_V2: 104.5
+    VOLKSWAGEN_RL_VSS: 129.1
+    VOLKSWAGEN_RL_VSS_V2: 129.1
   response: |-
-    77D100E621802041530
+    77D100E621802050B30
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
