--- a/tests/test_cases/2018/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2018/commands/714.77E.22224B|fc=1.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 144
   response: 77E0562224B0090
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 145
+  response: 77E0562224B0091
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 146
+  response: 77E0562224B0092
