--- a/tests/test_cases/2018/commands/713.77D.221803|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221803|fc=1.yaml
@@ -4,6 +4,13 @@ test_cases:
     VOLKSWAGEN_RR_VSS: 0
     VOLKSWAGEN_RR_VSS_V2: 0
   response: |-
+    77D100E621803000010
+    77D210001FFFEFFFEFF
+    77D22FEAAAAAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_RR_VSS: 0
+    VOLKSWAGEN_RR_VSS_V2: 0
+  response: |-
     77D100E621803000030
     77D2100060645070906
     77D22BBAAAAAAAAAAAA
@@ -36,9 +43,9 @@ test_cases:
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RR_VSS: 104.3
-    VOLKSWAGEN_RR_VSS_V2: 104.3
+    VOLKSWAGEN_RR_VSS: 128.1
+    VOLKSWAGEN_RR_VSS_V2: 128.1
   response: |-
-    77D100E621803041330
+    77D100E621803050130
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
