--- a/tests/test_cases/2018/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2018/commands/714.77E.221014|fc=1.yaml
@@ -1,9 +1,9 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AAT: 94
-    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 22
-  response: '77E0462101490'
+    VOLKSWAGEN_AAT: 92
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 21
+  response: 77E046210148E
 - expected_values:
     VOLKSWAGEN_AAT: 112
     VOLKSWAGEN_DASH_AMBIENT_AIR_T: 31
