--- a/tests/test_cases/2025/commands/746.7B0.2226ED|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.2226ED|fc=1.yaml
@@ -25,6 +25,10 @@ test_cases:
     VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.5
   response: 7B0046226ED05
 - expected_values:
+    VOLKSWAGEN_AIR_POLUTION: 0.6
+    VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.6
+  response: 7B0046226ED06
+- expected_values:
     VOLKSWAGEN_AIR_POLUTION: 0.7
     VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.7
   response: 7B0046226ED07
