--- a/tests/test_cases/2025/commands/7E1.223887.yaml
+++ b/tests/test_cases/2025/commands/7E1.223887.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_ODO_TCM_2_HD: 111411.2
   response: '7E90762388700001100'
+- expected_values:
+    VOLKSWAGEN_ODO_TCM_2_HD: 16895180.8
+  response: 7E9076238870000120A
