Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221802|fc=1.yaml
@@ -29,6 +29,13 @@ test_cases:
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 11.7
+    VOLKSWAGEN_RL_VSS_V2: 11.7
+  response: |-
+    77D100E621802007530
+    77D210006059406B205
+    77D22FFAAAAAAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 102.3
     VOLKSWAGEN_RL_VSS_V2: 102.3
   response: |-
