Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/713.77D.221810|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221810|fc=1.yaml
@@ -4,6 +4,11 @@ test_cases:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
   response: |-
     77D100C621810010000
+    77D21FC80000003F0AA
+- expected_values:
+    VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
+  response: |-
+    77D100C621810010000
     77D21FCAF000003F0AA
 - expected_values:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
@@ -14,7 +19,7 @@ test_cases:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
   response: |-
     77D100C621810010014
-    77D21FC60000003F0AA
+    77D21FC64000003DEAA
 - expected_values:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
   response: |-
@@ -28,5 +33,5 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
   response: |-
-    77D100C6218100110A4
-    77D21FC93000003F0AA
+    77D100C62181001FFEC
+    77D21FCB2000003F0AA
