--- a/tests/test_cases/2018/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221801|fc=1.yaml
@@ -15,6 +15,13 @@ test_cases:
     77D21FFFFFFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 33.8
+    VOLKSWAGEN_FR_VSS_V2: 33.8
+  response: |-
+    77D100E621801015280
+    77D21FFFF0502057805
+    77D224CAAAAAAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 51
     VOLKSWAGEN_FR_VSS_V2: 51
   response: |-
@@ -22,9 +29,9 @@ test_cases:
     77D21FFFFFFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FR_VSS: 130.2
-    VOLKSWAGEN_FR_VSS_V2: 130.2
+    VOLKSWAGEN_FR_VSS: 128.1
+    VOLKSWAGEN_FR_VSS_V2: 128.1
   response: |-
-    77D100E621801051680
+    77D100E621801050180
     77D21FFFFFFFFFFFFFF
     77D22FFAAAAAAAAAAAA
