--- a/tests/test_cases/2018/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2018/commands/714.77E.22224B|fc=1.yaml
@@ -12,3 +12,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 146
   response: 77E0562224B0092
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 147
+  response: 77E0562224B0093
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 148
+  response: 77E0562224B0094
