--- a/tests/test_cases/2024/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2024/commands/714.77E.22224B|fc=1.yaml
@@ -13,5 +13,8 @@ test_cases:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 64
   response: 77E0562224B0040
 - expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 65
+  response: 77E0562224B0041
+- expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 306
   response: 77E0562224B0132
