--- a/tests/test_cases/2024/commands/767.7D1.220838|fc=1.yaml
+++ b/tests/test_cases/2024/commands/767.7D1.220838|fc=1.yaml
@@ -1,6 +1,14 @@
 command_id: 767.7D1.220838|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_ECALL_SOC: 89
+    VOLKSWAGEN_ECALL_STATUS: NORMAL
+  response: 7D1056208380259
+- expected_values:
+    VOLKSWAGEN_ECALL_SOC: 90
+    VOLKSWAGEN_ECALL_STATUS: NORMAL
+  response: 7D105620838025A
+- expected_values:
     VOLKSWAGEN_ECALL_SOC: 93
     VOLKSWAGEN_ECALL_STATUS: NORMAL
   response: 7D105620838025D
