--- a/tests/test_cases/2018/commands/713.77D.2218B6|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.2218B6|fc=1.yaml
@@ -7,3 +7,10 @@ test_cases:
   response: |-
     77D10096218B6010188
     77D210E0000AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_CNT_STEER_SUPPORT_ACTIVE: 0
+    VOLKSWAGEN_CNT_STEER_SUPPORT_ODO_RDG_OF_LAST_ACT: 1
+    VOLKSWAGEN_CNT_STEER_SUPPORT_STEERING_TRQ: 0
+  response: |-
+    77D10096218B6010199
+    77D217A0000AAAAAAAA
