--- a/tests/test_cases/2024/commands/7E0.01A6.yaml
+++ b/tests/test_cases/2024/commands/7E0.01A6.yaml
@@ -15,3 +15,6 @@ test_cases:
 - expected_values:
     ODO: 19660.9
   response: 7E80641A600030001
+- expected_values:
+    ODO: 27030.9
+  response: 7E80641A600041FE5
