Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221801|fc=1.yaml
@@ -43,6 +43,13 @@ test_cases:
     77D2100078004AE04F4
     77D2204C901AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 216.5
+    VOLKSWAGEN_FR_VSS_V2: 216.5
+  response: |-
+    77D1010621801087520
+    77D21000780043C04AC
+    77D22047101AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 304
     VOLKSWAGEN_FR_VSS_V2: 304
   response: |-
