Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2025/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221801|fc=1.yaml
@@ -8,6 +8,13 @@ test_cases:
     77D21FFFF00FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 0
+    VOLKSWAGEN_FR_VSS_V2: 0
+  response: |-
+    77D1010621801000020
+    77D21000780FFFEFFFE
+    77D22FFFE01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 11.2
     VOLKSWAGEN_FR_VSS_V2: 11.2
   response: |-
@@ -15,10 +22,10 @@ test_cases:
     77D21000780FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FR_VSS: 49
-    VOLKSWAGEN_FR_VSS_V2: 49
+    VOLKSWAGEN_FR_VSS: 40.3
+    VOLKSWAGEN_FR_VSS_V2: 40.3
   response: |-
-    77D101062180101EA60
+    77D1010621801019360
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
