--- a/tests/test_cases/2025/commands/713.77D.221800|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221800|fc=1.yaml
@@ -8,6 +8,13 @@ test_cases:
     77D21FFFF00FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FL_VSS: 0
+    VOLKSWAGEN_FL_VSS_V2: 0
+  response: |-
+    77D1010621800000020
+    77D21000780FFFEFFFE
+    77D22FFFE01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FL_VSS: 7.2
     VOLKSWAGEN_FL_VSS_V2: 7.2
   response: |-
@@ -15,10 +22,10 @@ test_cases:
     77D21000780FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FL_VSS: 34.2
-    VOLKSWAGEN_FL_VSS_V2: 34.2
+    VOLKSWAGEN_FL_VSS: 30.5
+    VOLKSWAGEN_FL_VSS_V2: 30.5
   response: |-
-    77D1010621800015660
+    77D1010621800013160
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
