--- a/tests/test_cases/2025/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221802|fc=1.yaml
@@ -8,6 +8,13 @@ test_cases:
     77D21FFFF00FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 0
+    VOLKSWAGEN_RL_VSS_V2: 0
+  response: |-
+    77D1010621802000020
+    77D21000780FFFEFFFE
+    77D22FFFE01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 3.9
     VOLKSWAGEN_RL_VSS_V2: 3.9
   response: |-
@@ -15,10 +22,10 @@ test_cases:
     77D21000780FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RL_VSS: 43.1
-    VOLKSWAGEN_RL_VSS_V2: 43.1
+    VOLKSWAGEN_RL_VSS: 31.3
+    VOLKSWAGEN_RL_VSS_V2: 31.3
   response: |-
-    77D101062180201AF60
+    77D1010621802013920
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
