--- a/tests/test_cases/2025/commands/713.77D.221803|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221803|fc=1.yaml
@@ -8,6 +8,13 @@ test_cases:
     77D21FFFF00FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RR_VSS: 0
+    VOLKSWAGEN_RR_VSS_V2: 0
+  response: |-
+    77D1010621803000020
+    77D21000780FFFEFFFE
+    77D22FFFE01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RR_VSS: 8.9
     VOLKSWAGEN_RR_VSS_V2: 8.9
   response: |-
@@ -15,12 +22,19 @@ test_cases:
     77D21000780FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RR_VSS: 52.7
-    VOLKSWAGEN_RR_VSS_V2: 52.7
+    VOLKSWAGEN_RR_VSS: 34.3
+    VOLKSWAGEN_RR_VSS_V2: 34.3
   response: |-
-    77D1010621803020F60
+    77D1010621803015760
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_RR_VSS: 294.4
+    VOLKSWAGEN_RR_VSS_V2: 294.4
+  response: |-
+    77D10106218030B8020
+    77D2100078005E806E9
+    77D22068101AAAAAAAA
 - expected_values:
     VOLKSWAGEN_RR_VSS: 1074.9
     VOLKSWAGEN_RR_VSS_V2: 1074.9
