--- a/tests/test_cases/2025/commands/713.77D.221808|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221808|fc=1.yaml
@@ -18,6 +18,10 @@ test_cases:
   response: 77D056218084018
 - expected_values:
     VOLKSWAGEN_HDC_ACTIVE: 0
+    VOLKSWAGEN_HDC_INCLINE: 32
+  response: 77D056218084020
+- expected_values:
+    VOLKSWAGEN_HDC_ACTIVE: 0
     VOLKSWAGEN_HDC_INCLINE: 40
   response: 77D056218084028
 - expected_values:
