--- a/tests/test_cases/2025/commands/746.7B0.2226ED|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.2226ED|fc=1.yaml
@@ -33,6 +33,10 @@ test_cases:
     VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.7
   response: 7B0046226ED07
 - expected_values:
+    VOLKSWAGEN_AIR_POLUTION: 0.8
+    VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.8
+  response: 7B0046226ED08
+- expected_values:
     VOLKSWAGEN_AIR_POLUTION: 1.4
     VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 1.4
   response: 7B0046226ED0E
