Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2025/commands/713.77D.221800|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221800|fc=1.yaml
@@ -29,10 +29,17 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FL_VSS: 1074.9
-    VOLKSWAGEN_FL_VSS_V2: 1074.9
+    VOLKSWAGEN_FL_VSS: 194
+    VOLKSWAGEN_FL_VSS_V2: 194
   response: |-
-    77D101062180029FD20
+    77D1010621800079420
+    77D2100078006BA0753
+    77D22071301AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_FL_VSS: 742.2
+    VOLKSWAGEN_FL_VSS_V2: 742.2
+  response: |-
+    77D10106218001CFE20
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
