--- a/tests/test_cases/2025/commands/713.77D.221803|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221803|fc=1.yaml
@@ -36,6 +36,13 @@ test_cases:
     77D2100078005E806E9
     77D22068101AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RR_VSS: 410.8
+    VOLKSWAGEN_RR_VSS_V2: 410.8
+  response: |-
+    77D1010621803100C20
+    77D21000780072707CE
+    77D22078C01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RR_VSS: 1074.9
     VOLKSWAGEN_RR_VSS_V2: 1074.9
   response: |-
