--- a/tests/test_cases/2025/commands/FC00.FE0076.22295A|ta=76,c=17.yaml
+++ b/tests/test_cases/2025/commands/FC00.FE0076.22295A|ta=76,c=17.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_ENG_ODO: 4550
   response: 17FE00760662295A0011C6
+- expected_values:
+    VOLKSWAGEN_ENG_ODO: 4674
+  response: 17FE00760662295A001242
