--- a/tests/test_cases/2025/commands/713.77D.221808|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221808|fc=1.yaml
@@ -28,3 +28,7 @@ test_cases:
     VOLKSWAGEN_HDC_ACTIVE: 0
     VOLKSWAGEN_HDC_INCLINE: 56
   response: 77D056218084038
+- expected_values:
+    VOLKSWAGEN_HDC_ACTIVE: 0
+    VOLKSWAGEN_HDC_INCLINE: 80
+  response: 77D056218084050
