Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2025/commands/710.77A.222AB5|fc=1.yaml
+++ b/tests/test_cases/2025/commands/710.77A.222AB5|fc=1.yaml
@@ -3,6 +3,11 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
+    77A100D622AB500B200
+    77A21B2000000000000
+- expected_values:
+    VOLKSWAGEN_RANGE_EST_CAN: 0
+  response: |-
     77A100D622AB500BF00
     77A21BF000000000000
 - expected_values:
