--- a/tests/test_cases/2025/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221801|fc=1.yaml
@@ -29,6 +29,13 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 58.7
+    VOLKSWAGEN_FR_VSS_V2: 58.7
+  response: |-
+    77D1010621801024B20
+    77D2100078006ED0808
+    77D22073101AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 972.3
     VOLKSWAGEN_FR_VSS_V2: 972.3
   response: |-
