--- a/tests/test_cases/2025/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221802|fc=1.yaml
@@ -36,6 +36,20 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 536.2
+    VOLKSWAGEN_RL_VSS_V2: 536.2
+  response: |-
+    77D101062180214F220
+    77D21000780076F08C5
+    77D2207CC01AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_RL_VSS: 658.4
+    VOLKSWAGEN_RL_VSS_V2: 658.4
+  response: |-
+    77D101062180219B820
+    77D2100078004BD053C
+    77D22050001AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 1161.7
     VOLKSWAGEN_RL_VSS_V2: 1161.7
   response: |-
