--- a/tests/test_cases/2024/commands/713.77D.221803|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221803|fc=1.yaml
@@ -22,6 +22,13 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RR_VSS: 37.2
+    VOLKSWAGEN_RR_VSS_V2: 37.2
+  response: |-
+    77D1010621803017460
+    77D21000780FFFFFFFF
+    77D22FFFF01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RR_VSS: 169.9
     VOLKSWAGEN_RR_VSS_V2: 169.9
   response: |-
