--- a/tests/test_cases/2024/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2024/commands/714.77E.22224B|fc=1.yaml
@@ -24,3 +24,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 327
   response: 77E0562224B0147
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 328
+  response: 77E0562224B0148
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 329
+  response: 77E0562224B0149
