--- a/tests/test_cases/2025/commands/710.77A.222AB6|fc=1.yaml
+++ b/tests/test_cases/2025/commands/710.77A.222AB6|fc=1.yaml
@@ -1,10 +1,15 @@
 command_id: 710.77A.222AB6|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_RANGE_V2: 105
+    VOLKSWAGEN_RANGE_V2: 85
   response: |-
-    77A100A622AB6006900
-    77A216907FD01555555
+    77A100A622AB6005500
+    77A215507FD01555555
+- expected_values:
+    VOLKSWAGEN_RANGE_V2: 95
+  response: |-
+    77A100A622AB6005F00
+    77A215F07FD01555555
 - expected_values:
     VOLKSWAGEN_RANGE_V2: 160
   response: |-
