--- a/tests/test_cases/2025/commands/7E0.0106.yaml
+++ b/tests/test_cases/2025/commands/7E0.0106.yaml
@@ -4,5 +4,5 @@ test_cases:
     SHRTFT1: -41.28125
   response: 7E80341066F
 - expected_values:
-    SHRTFT1: -16.28125
-  response: 7E80341068F
+    SHRTFT1: -15.5
+  response: '7E803410690'
