Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/713.77D.22180C|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.22180C|fc=1.yaml
@@ -20,6 +20,15 @@ test_cases:
     77D21003F00400040AA
 - expected_values:
     VOLKSWAGEN_EDL_ACTIVE: 0
+    VOLKSWAGEN_EDL_FR_L_BRAKE_T: 34.5
+    VOLKSWAGEN_EDL_FR_R_BRAKE_T: 34.5
+    VOLKSWAGEN_EDL_RR_L_BRAKE_T: 37
+    VOLKSWAGEN_EDL_RR_R_BRAKE_T: 39.5
+  response: |-
+    77D100C62180CBC0045
+    77D210045004A004FAA
+- expected_values:
+    VOLKSWAGEN_EDL_ACTIVE: 0
     VOLKSWAGEN_EDL_FR_L_BRAKE_T: 36
     VOLKSWAGEN_EDL_FR_R_BRAKE_T: 36
     VOLKSWAGEN_EDL_RR_L_BRAKE_T: 31.5
