Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2018/commands/714.77E.22224B|fc=1.yaml
@@ -24,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 151
   response: 77E0562224B0097
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 152
+  response: 77E0562224B0098
