--- a/tests/test_cases/2018/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2018/commands/714.77E.221014|fc=1.yaml
@@ -1,9 +1,9 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AAT: 90
-    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 20
-  response: 77E046210148C
+    VOLKSWAGEN_AAT: 81
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 15.5
+  response: '77E0462101483'
 - expected_values:
     VOLKSWAGEN_AAT: 112
     VOLKSWAGEN_DASH_AMBIENT_AIR_T: 31
