--- a/tests/test_cases/2018/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221801|fc=1.yaml
@@ -15,6 +15,13 @@ test_cases:
     77D21FFFFFFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 3.9
+    VOLKSWAGEN_FR_VSS_V2: 3.9
+  response: |-
+    77D100E621801002780
+    77D21FFFF0859091A08
+    77D22B8AAAAAAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 33.8
     VOLKSWAGEN_FR_VSS_V2: 33.8
   response: |-
