Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221800|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221800|fc=1.yaml
@@ -29,6 +29,27 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FL_VSS: 115
+    VOLKSWAGEN_FL_VSS_V2: 115
+  response: |-
+    77D1010621800047E20
+    77D2100078004DC0517
+    77D22050401AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_FL_VSS: 221.1
+    VOLKSWAGEN_FL_VSS_V2: 221.1
+  response: |-
+    77D101062180008A320
+    77D2100078007F408C9
+    77D22086F01AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_FL_VSS: 322.2
+    VOLKSWAGEN_FL_VSS_V2: 322.2
+  response: |-
+    77D10106218000C9620
+    77D2100078004380450
+    77D22044701AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FL_VSS: 435.7
     VOLKSWAGEN_FL_VSS_V2: 435.7
   response: |-
