Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221801|fc=1.yaml
@@ -8,10 +8,10 @@ test_cases:
     77D21FFFFFFFEFFFEFF
     77D22FEAAAAAAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FR_VSS: 3.2
-    VOLKSWAGEN_FR_VSS_V2: 3.2
+    VOLKSWAGEN_FR_VSS: 3
+    VOLKSWAGEN_FR_VSS_V2: 3
   response: |-
-    77D100E621801002080
+    77D100E621801001E80
     77D21FFFFFFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
@@ -21,6 +21,20 @@ test_cases:
     77D100E621801002780
     77D21FFFF0859091A08
     77D22B8AAAAAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_FR_VSS: 6.5
+    VOLKSWAGEN_FR_VSS_V2: 6.5
+  response: |-
+    77D100E621801004180
+    77D21FFFF186C25C01D
+    77D22FDAAAAAAAAAAAA
+- expected_values:
+    VOLKSWAGEN_FR_VSS: 8
+    VOLKSWAGEN_FR_VSS_V2: 8
+  response: |-
+    77D100E621801005080
+    77D21FFFF11C0138212
+    77D229DAAAAAAAAAAAA
 - expected_values:
     VOLKSWAGEN_FR_VSS: 33.8
     VOLKSWAGEN_FR_VSS_V2: 33.8
