--- a/tests/test_cases/2018/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221802|fc=1.yaml
@@ -29,6 +29,13 @@ test_cases:
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 3.7
+    VOLKSWAGEN_RL_VSS_V2: 3.7
+  response: |-
+    77D100E621802002530
+    77D2100060C130D3B0C
+    77D2289AAAAAAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 3.9
     VOLKSWAGEN_RL_VSS_V2: 3.9
   response: |-
