--- a/tests/test_cases/2018/commands/713.77D.221803|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221803|fc=1.yaml
@@ -36,6 +36,13 @@ test_cases:
     77D210006FFFFFFFFFF
     77D22FFAAAAAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RR_VSS: 9.3
+    VOLKSWAGEN_RR_VSS_V2: 9.3
+  response: |-
+    77D100E621803005D30
+    77D21000609120C020A
+    77D221DAAAAAAAAAAAA
+- expected_values:
     VOLKSWAGEN_RR_VSS: 127.9
     VOLKSWAGEN_RR_VSS_V2: 127.9
   response: |-
