Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221801|fc=1.yaml
@@ -19,7 +19,7 @@ test_cases:
     VOLKSWAGEN_FR_VSS_V2: 0
   response: |-
     77D1010621801000060
-    77D21FFFF00FFFEFFFE
+    77D21000780FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
     VOLKSWAGEN_FR_VSS: 34.6
@@ -36,6 +36,13 @@ test_cases:
     77D21000780048504D8
     77D2204A901AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 126.2
+    VOLKSWAGEN_FR_VSS_V2: 126.2
+  response: |-
+    77D101062180104EE20
+    77D210007800450049D
+    77D22046C01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 142.8
     VOLKSWAGEN_FR_VSS_V2: 142.8
   response: |-
@@ -43,12 +50,12 @@ test_cases:
     77D2100078006D708A2
     77D22075701AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FR_VSS: 216.5
-    VOLKSWAGEN_FR_VSS_V2: 216.5
+    VOLKSWAGEN_FR_VSS: 197.8
+    VOLKSWAGEN_FR_VSS_V2: 197.8
   response: |-
-    77D1010621801087520
-    77D21000780043C04AC
-    77D22047101AAAAAAAA
+    77D101062180107BA20
+    77D21000780043A049A
+    77D22046401AAAAAAAA
 - expected_values:
     VOLKSWAGEN_FR_VSS: 304
     VOLKSWAGEN_FR_VSS_V2: 304
