--- a/tests/test_cases/2025/commands/767.7D1.220838|fc=1.yaml
+++ b/tests/test_cases/2025/commands/767.7D1.220838|fc=1.yaml
@@ -1,6 +1,18 @@
 command_id: 767.7D1.220838|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_ECALL_SOC: 87
+    VOLKSWAGEN_ECALL_STATUS: NORMAL
+  response: 7D1056208380257
+- expected_values:
+    VOLKSWAGEN_ECALL_SOC: 88
+    VOLKSWAGEN_ECALL_STATUS: NORMAL
+  response: 7D1056208380258
+- expected_values:
+    VOLKSWAGEN_ECALL_SOC: 89
+    VOLKSWAGEN_ECALL_STATUS: NORMAL
+  response: 7D1056208380259
+- expected_values:
     VOLKSWAGEN_ECALL_SOC: 91
     VOLKSWAGEN_ECALL_STATUS: NORMAL
   response: 7D105620838025B
