--- a/tests/test_cases/2025/commands/7E0.0105.yaml
+++ b/tests/test_cases/2025/commands/7E0.0105.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
-    ECT: 37
-  response: 7E80341054D
+    ECT: 30
+  response: '7E803410546'
 - expected_values:
     ECT: 108
   response: '7E803410594'
